# pulsevad-optimal

./: .gitignore  README.md  pyproject.toml
demos/: linear_regression.py
geometries/: lead_geometry.py  lead_geometry_jacketing.py  lead_geometry_jacketing_rearranging_5mm.py  lead_geometry_jacketing_rearranging_6mm.py
geometries/geomDir/: lead.msh  lead.stl  leadJacketed.stl  leadJacketedRearranged.stl  leadJacketedRearranged5mm.stl  leadJacketedRearranged6mm.stl
heatTransfer/: MWE.py  MWE2.py  cableGenerator.py  cable_data.csv  simpleTwistedCable.py  spiralCableGenerator.py  spiral_occ.stl  spiral_test.py
heatTransfer/flat/: cableGenerator.py  main.py  params.py  run.sh
heatTransfer/flatSignalled/: cableGenerator.py  main.py  params.py
heatTransfer/geomDir/: first_cable.h5  first_cable.msh  first_cable.xdmf  first_cable_tags.h5  first_cable_tags.xdmf  mwe.brep  mwe.stl  mwe2.stl  spiral_cable.xdmf  spiral_cable_tags.h5  spiral_cable_tags.xdmf
heatTransfer/mwes/: MWE.py  simpleTwistedCable.py  test.py
heatTransfer/spiral/: main.py  params.py  run.sh  spiralCableGenerator.py
heatTransfer/spiral30awg/: main.py  params.py  spiralCableGenerator.py
importance_detection/: linear_regression.py
importance_detection/data_full/: data.csv  linear_regression.py
importance_detection/paper/: data.csv  (+9 more)
mechanical_optimization/: first_cable.py  first_cable_results.txt  first_cable_results.txtclear  simple.py
optimization_scripts/: data_full.csv  mathematical.py
scripts/: linear_regression.py  mathematical.py  ml.py  model_coeffs.txt  nn.py  regression.py
(+110 files in other folders)
