[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsevad"
version = "1.0.0"
description = "This is a pulsevad code"
readme = "README.md"
requires-python = ">=3.13.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pulsevad.data" = ["cable_data.csv"]